--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ CLOUD_API_SECRET=e0cjYSQJODCziGk8loaiUz3zRrA
 OPENCAGE_API_KEY=827122d45a01487393d15893559c7665
 
 ATLAS_URL=mongodb+srv://harsh-mahajan:w8gwT9TguJjSWiUR@cluster0.etazi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+SECRET=thisisasecret
